force-app/main/default/objects/Expense__c/fields/Additional_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Expenses__c</fullName>
    <label>Additional Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>