force-app/main/default/objects/Expense__c/fields/CLIN__c.field-meta.xml
<CustomField>
    <fullName>CLIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLIN</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Expenses (CLIN)</relationshipLabel>
    <relationshipName>Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>