force-app/main/default/objects/Expense__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LU to Funding Code</description>
    <label>Funding Source</label>
    <referenceTo>B3_Project__c</referenceTo>
    <relationshipLabel>Expenses (Funding Source)</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>