force-app/main/default/objects/Expense__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>B3_Project__c</referenceTo>
    <relationshipLabel>Expenses (Project Name)</relationshipLabel>
    <relationshipName>Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>